# MyAi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  RUN_MYAI.md  SETUP_GUIDE.md  WINDOWS_SETUP.md  docker-compose.yml  docker-start.bat  docker-start.sh  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh
app/: bot.py  config.py  main.py
app/agent/: core.py  harness.py  intercepts.py  prompts.py  tools.py
app/learning/: engine.py
app/services/: auto_skill.py  autonomy.py  file_access.py  heartbeat.py  mcp_client.py  ollama.py  pause.py  suggestions.py  whatsapp.py
app/workspace/: identity.md  soul.md  user.md  user.md.template
app/workspace/agents/polly/: identity.md  soul.md
app/workspace/agents/sam/: identity.md
config/: mcp_servers.json  permissions.yaml
web/: app.js  index.html  styles.css
