[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miai"
version = "0.4.0"
description = "Local AI personal agent powered by Ollama — file tools, email, WhatsApp, vision, reminders, and more"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.22",
    "ddgs>=9.11.0",
    "bcrypt>=4.1.0",
    "cryptography>=42.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
# Full feature set (recommended for personal use)
full = [
    "twilio>=9.0.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
    "unstructured>=0.12.0",
    "python-magic>=0.4.27",
]
# Slack integration
slack = [
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
]
# Development tools
dev = ["pytest", "pytest-asyncio", "pytest-aiohttp", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
